# stameska

./: .gitignore  .gitmodules  .travis.yml  .ycm_extra_conf.py  4klang.h  4klang.inc  CMakeLists.txt  Makefile  PolledFile.h  Tool.props  blitter.h  dump_audio.vcxproj  greetings.h  greetings.txt  intro.c  intro.h  intro_c.vcxproj  intro_c.vcxproj.filters  jl04.sln  stameska-vs2017.vcxproj  stameska.mk  stameska.sln  stameska.vcxproj  stameska.vcxproj.filters
.github/workflows/: ci.yml
4klang_linux/: 4klang.h  4klang.inc
4klang_win32/: 4klang.h  4klang.inc
example/: dump_audio.vcxproj  simple.glsl  simple.json  simple.rocket  simple_video.json  testcube.json  testcube_video.json
example/4klang_win32/: 4klang.h
examples/basic_intro/: intro_c.vcxproj
examples/basic_intro/shaders/: blitter.glsl
examples/custom_render/: Makefile  custom_render.cpp  main.glsl  project.json  project.yaml
examples/feedback/: build.sh  feedback.glsl  feedback.yaml  feedback_video.yaml  intro.c  post.glsl
examples/framebuffer/: fragment.glsl  framebuffer.yaml  framebuffer_video.yaml  post.glsl
examples/raytest/: raymarch.glsl  video.yaml
examples/simple/: fragment.glsl  fragment2.glsl  simple.rocket  simple.yaml  simple_video.yaml
examples/testcube/: testcube.glsl
examples/texture/: fragment.glsl  video.yaml
examples/triangles/: gfragment.glsl  gvertex.glsl  triangles.yaml  video.yaml
shaders/: blitter.glsl  intro.glsl
src/: AudioCtl.cc  AudioCtl.h  AutomationBasic.cpp  AutomationBasic.h  Expected.h  Export.cpp  Export.h  FFT.cc  FFT.h  Framebuffer.h  GuiScope.cpp  GuiScope.h  INode.hh  MIDI.cc  MIDI.h  OpenGL.cpp  OpenGL.h  PolledFile.cpp  PolledFile.h  PolledPipelineDesc.cpp  PolledPipelineDesc.h  PolledResource.h  PolledShaderProgram.cpp  PolledShaderProgram.h  PolledShaderSource.cpp  PolledShaderSource.h  PolledTexture.cpp  PolledTexture.h  Program.cpp  Program.h  ProjectSettings.cpp  ProjectSettings.h  RenderDesc.cpp  RenderDesc.h  Resources.cpp  Resources.h  Rocket.cpp  Rocket.h  RootNode.cc  RootNode.hh  (+29 more)
test/: RenderDesc.cpp  ShaderSource.cpp  main.cpp
tool/: tool.cpp  tool.vcxproj  tool.vcxproj.filters  video.cpp  video.h
